Исправил конфликты 2.0